--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/index.css">
     <title>Laptop Price Predictor</title>
+       
 </head>
 <body>
     <div class="wrapper">
@@ -13,7 +14,7 @@
         <form action="/" method="POST">
             <div class="form">
                 <div class="inputfield">
-                    <label for="ram">Ram (GB)</label>
+                    <label for="ram">RAM (GB)</label>
                     <input class="input" type="text" name="ram" required>
                 </div>
                 <div class="inputfield">
@@ -22,7 +23,7 @@
                 </div>
                 <div class="inputfield">
                     <label for="company">Company</label>
-                    <div class = "custom_select">
+                    <div class="custom_select">
                         <select name="company" id="company">
                             <option value="" selected hidden>Select</option>
                             <option value="acer">Acer</option>
@@ -39,7 +40,7 @@
                 </div>
                 <div class="inputfield">
                     <label for="typename">Type Name</label>
-                    <div class = "custom_select">
+                    <div class="custom_select">
                         <select name="typename" id="typename">
                             <option value="" selected hidden>Select</option>
                             <option value="2in1convertible">2 in 1 Convertible</option>
@@ -53,7 +54,7 @@
                 </div>
                 <div class="inputfield">
                     <label for="opsys">Operating System</label>           
-                    <div class = "custom_select">
+                    <div class="custom_select">
                         <select name="opsys" id="opsys">
                             <option value="" selected hidden>Select</option>
                             <option value="windows">Windows</option>
@@ -65,7 +66,7 @@
                 </div>
                 <div class="inputfield">
                     <label for="cpuname">CPU</label>   
-                    <div class = "custom_select">
+                    <div class="custom_select">
                         <select name="cpuname" id="cpuname">
                             <option value="" selected hidden>Select</option>
                             <option value="intelcorei3">Intel Core i3</option>
@@ -78,7 +79,7 @@
                 </div>
                 <div class="inputfield">
                     <label for="gpuname">GPU</label>
-                    <div class = "custom_select">
+                    <div class="custom_select">
                         <select name="gpuname" id="gpuname">
                             <option value="" selected hidden>Select</option>
                             <option value="intel">Intel</option>
@@ -99,14 +100,14 @@
                 </div>
     
                 <div class="inputfield">
-                    <input class="btn" type="submit" value="Precict Price">
+                    <input class="btn" type="submit" value="Predict Price">
                 </div>
             </div>
         </form>
 
         <div class="result">
             {% if pred_value != 0 %}
-            <p>Estimated Price : LKR {{pred_value}}</p>
+            <p>Estimated Price: <span class="price">LKR {{ pred_value }}</span></p>
             {% endif %}
         </div>
     </div>
